--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -41,10 +41,10 @@
             <option value="production">Production</option>
             </select>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="redirectUri">Redirect URI</label>
             <input type="text" class="form-control" placeholder="enter the redirectUri"  id="redirectUri" /><br>
-        </div>
+        </div> -->
     </form>
     <p>Now click the <b>Connect to QuickBooks</b> button below.</p>
     <pre id="accessToken"></pre>
@@ -94,7 +94,8 @@
             jsonBody.clientId = $('#clientId').val();
             jsonBody.clientSecret = $('#clientSecret').val();
             jsonBody.environment = $('#environment').val();
-            jsonBody.redirectUri = $('#redirectUri').val();
+            // jsonBody.redirectUri = $('#redirectUri').val();
+            jsonBody.redirectUri = "http://dev.calvoterguide.com:3300/callback";;
 
             $.get('/authUri', {json:jsonBody}, function (uri) {
                 console.log('The Auth Uris is :'+uri);
